# Sudoku

./: CMakeLists.txt  README.md  config.rc  main.cpp
